10/23 티져 오타 수정
10/23 티져 오타 수정

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <title>SUBBEAT</title>
   <link media="only screen and (max-device-width: 370px)" rel="alternate" href="http://subbe.at/phone/index.html"/>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?4047461162"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?158587604" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4124102617"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3875628575" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -56,7 +56,10 @@
        <p>Upcoming Events:</p>
       </div>
       <div class="clearfix colelem" id="pu206-6"><!-- group -->
-       <a class="nonblock nontext Link clearfix grpelem" id="u206-6" href="https://www.facebook.com/events/658757987588526/" target="_blank"><!-- content --><p>SUBBEAT vs</p><p>VERY SPECIAL GUESTS</p></a>
+       <div class="Link clearfix grpelem" id="u206-6"><!-- content -->
+        <p>SUBBEAT vs</p>
+        <p>VERY SPECIAL GUESTS</p>
+       </div>
        <div class="clearfix grpelem" id="u207-6"><!-- content -->
         <p>2015-10-23 FRI</p>
         <p>Cakeshop Seoul</p>
