--- a/phone/index.html
+++ b/phone/index.html
@@ -12,8 +12,8 @@
   <meta name="viewport" content="width=319"/>
   <link rel="canonical" href="http://subbe.at/index.html"/>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/site_global.css?4047461162"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4035219328" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="../css/site_global.css?4124102617"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?358594021" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -38,7 +38,10 @@
      <p>Upcoming Events:</p>
     </div>
     <div class="clearfix colelem" id="pu208-6"><!-- group -->
-     <a class="nonblock nontext Link clearfix grpelem" id="u208-6" href="https://www.facebook.com/events/658757987588526/" target="_blank"><!-- content --><p>SUBBEAT vs</p><p>VERY SPECIAL GUESTS</p></a>
+     <div class="Link clearfix grpelem" id="u208-6"><!-- content -->
+      <p>SUBBEAT vs</p>
+      <p>VERY SPECIAL GUESTS</p>
+     </div>
      <div class="clearfix grpelem" id="u209-6"><!-- content -->
       <p>2015-10-23 FRI</p>
       <p>Cakeshop Seoul</p>
