--- a/kitties/index.html
+++ b/kitties/index.html
@@ -17,11 +17,33 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4149833697" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=187244646" id="pagesheet"/>
+  <!-- JS includes -->
+  <script src="https://use.typekit.net/ik/N-L1oCkWkrO_8N2nbb1aY7LqLPL3iYz0nyb4pm_44OSfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwD6MsMMeMq6MKGHfwz6MsMMeMS6MKGHfFQ6MsMMeMJ6MqGIQWmDZZMgTS1MDb9.js" type="text/javascript"></script>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   try {Typekit.load();} catch(e) {}
+</script>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
+   <div id="u94-24-wrapper">
+    <div class="clearfix pinned-colelem" id="u94-24" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p id="u94-2">KITTIES</p>
+     <p id="u94-4">ARE COMING</p>
+     <p id="u94-6">SOON!</p>
+     <p id="u94-7">&nbsp;</p>
+     <p id="u94-9">Yoshino Yoshikawa</p>
+     <p id="u94-11">mondaystudio</p>
+     <p id="u94-13">LOBOTOME</p>
+     <p id="u94-15">beatbird</p>
+     <p id="u94-17">stepic</p>
+     <p id="u94-18">&nbsp;</p>
+     <p id="u94-20">Illustration by m3iji</p>
+     <p id="u94-22">2017 SUBBEAT</p>
+    </div>
+   </div>
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="0" data-content-below-spacer="500" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
