--- a/kitties/index.html
+++ b/kitties/index.html
@@ -14,12 +14,12 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>SUBBEAT: KITTIES #1</title>
+  <title>SUBBEAT presents Kitties #1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=345487550" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3838022437" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/ljJ0NVbBubXJRVBe9kkpuTUYETaCSiEc1nxvX0mpqgJfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MKGHfwz6MsMMeMS6MqGIQWmDZZMgXEnbDb9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/WvpftIr0HJ4xY9FogSdX_0dVoukpcF66WWNjb6NYgT6feGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MKGHfwz6MsMMeMS6MqGIQWmDZZMgqnVoDb9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -28,26 +28,69 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="browser_width colelem" id="u94-30-bw">
-    <div class="clearfix" id="u94-30" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p id="u94-2">KITTIES</p>
-     <p id="u94-4">ARE COMING</p>
-     <p id="u94-6">SOON!</p>
-     <p id="u94-8">2017.09.17 SUN</p>
-     <p id="u94-10">KST/JST 20:00</p>
-     <p id="u94-11">&nbsp;</p>
-     <p id="u94-13">♫</p>
-     <p id="u94-15">Yoshino Yoshikawa</p>
-     <p id="u94-17">mondaystudio</p>
-     <p id="u94-19">LOBOTOME</p>
-     <p id="u94-21">beatbird</p>
-     <p id="u94-23">stepic</p>
-     <p id="u94-24">&nbsp;</p>
-     <p id="u94-26">Illustration by m3iji</p>
-     <p id="u94-28">SUBBEAT, 2017</p>
+   <div class="clearfix colelem" id="pu94-6"><!-- column -->
+    <div class="clearfix colelem" id="u94-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>SUBBEAT</p>
+     <p>presents</p>
+    </div>
+    <div class="clearfix colelem" id="u114-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>Kitties #1</p>
+    </div>
+    <div class="clearfix colelem" id="pu111"><!-- group -->
+     <div class="grpelem" id="u111"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u117-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u117-2">#1</p>
+      <p id="u117-4">Yoshino Yoshikawa</p>
+      <p id="u117-6">Slack Bubbling</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu129"><!-- group -->
+     <div class="shadow grpelem" id="u129"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u126-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u126-2">#2</p>
+      <p id="u126-4">stepic</p>
+      <p id="u126-6">myamyamyamyamyamyamya</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu135"><!-- group -->
+     <div class="shadow grpelem" id="u135"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u132-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u132-2">#3</p>
+      <p id="u132-4">LOBOTOME</p>
+      <p id="u132-6">Bring In The Kitties</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu141"><!-- group -->
+     <div class="shadow grpelem" id="u141"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u138-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u138-2">#4</p>
+      <p id="u138-4">beatbird</p>
+      <p id="u138-6">Nyaa Bambaata</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu147"><!-- group -->
+     <div class="shadow grpelem" id="u147"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u144-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u144-2">#5</p>
+      <p id="u144-4">mondaystudio</p>
+      <p id="u144-6">New Cat</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu159"><!-- group -->
+     <div class="shadow grpelem" id="u159"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u156-9" href="https://www.toneden.io/subbeat/post/subbeat-kitties-1-ep" target="_blank" title="DOWNLOAD" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p id="u156">&nbsp;</p><p id="u156-3">FREE</p><p id="u156-5">DOWNLOAD</p><p id="u156-7">HERE</p></a>
+    </div>
+    <div class="clearfix colelem" id="pu150"><!-- group -->
+     <div class="shadow grpelem" id="u150"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u153-9" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p id="u153">&nbsp;</p>
+      <p id="u153-3">Illustration by m3iji</p>
+      <p id="u153-5">Design by mondaystudio</p>
+      <p id="u153-7">2017 SUBBEAT</p>
+     </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="577" data-content-above-spacer="577" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1194" data-content-above-spacer="1190" data-content-below-spacer="66" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -64,8 +107,6 @@ var muse_init=function(){require.config({baseUrl:""});require(["jquery","museuti
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.resizeHeight('.browser_width');/* resize height */
-Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
