--- a/kitties/index.html
+++ b/kitties/index.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>SUBBEAT presents Kitties #1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=51756838" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4063657173" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/DPo_41CJHEfuxmTCJub8IHcPmg-VKExIxCXvsZNkmSwfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MKGHfwz6MsMMeMS6MqGIQWmDZZMg3dWoDb9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/TFV51zhkkI6QcC3z7F7wtikjP1trH7yRL6g8UvBdV0GfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MKGHfwz6MsMMeMS6MqGIQWmDZZMg1VQoDb9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -29,32 +29,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="clearfix colelem" id="pu94-6"><!-- column -->
-    <div class="clearfix colelem" id="u94-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+    <div class="clearfix colelem" id="u94-6" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
      <p>SUBBEAT</p>
      <p>presents</p>
     </div>
-    <div class="clearfix colelem" id="u114-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+    <div class="clearfix colelem" id="u114-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
      <p>Kitties #1</p>
     </div>
     <div class="clearfix colelem" id="pu111"><!-- group -->
-     <div class="grpelem" id="u111"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u117-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="grpelem" id="u111" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u117-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
       <p id="u117-2">#1</p>
       <p id="u117-4">Yoshino Yoshikawa</p>
       <p id="u117-6">Slack Bubbling</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu129"><!-- group -->
-     <div class="shadow grpelem" id="u129"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u126-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="shadow grpelem" id="u129" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u126-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
       <p id="u126-2">#2</p>
       <p id="u126-4">stepic</p>
       <p id="u126-6">myamyamyamyamyamyamya</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu135"><!-- group -->
-     <div class="shadow grpelem" id="u135"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u132-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="shadow grpelem" id="u135" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u132-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
       <p id="u132-2">#3</p>
       <p id="u132-4">LOBOTOME</p>
       <p id="u132-6">Bring In The Kitties</p>
@@ -69,20 +69,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="clearfix colelem" id="pu147"><!-- group -->
-     <div class="shadow grpelem" id="u147"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u144-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="shadow grpelem" id="u147" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u144-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
       <p id="u144-2">#5</p>
       <p id="u144-4">mondaystudio</p>
       <p id="u144-6">New Cat</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu159"><!-- group -->
-     <div class="shadow grpelem" id="u159"><!-- simple frame --></div>
-     <a class="nonblock nontext clearfix grpelem" id="u156-9" href="https://www.toneden.io/subbeat/post/subbeat-kitties-1-ep" target="_blank" title="DOWNLOAD" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p id="u156">&nbsp;</p><p id="u156-3">FREE</p><p id="u156-5">DOWNLOAD</p><p id="u156-7">HERE</p></a>
+     <div class="shadow grpelem" id="u159" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u156-9" href="https://www.toneden.io/subbeat/post/subbeat-kitties-1-ep" target="_blank" title="DOWNLOAD" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u156">&nbsp;</p><p id="u156-3">FREE</p><p id="u156-5">DOWNLOAD</p><p id="u156-7">HERE</p></a>
     </div>
     <div class="clearfix colelem" id="pu150"><!-- group -->
-     <div class="shadow grpelem" id="u150"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u153-9" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="shadow grpelem" id="u150" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u153-9" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
       <p id="u153">&nbsp;</p>
       <p id="u153-3">Illustration by m3iji</p>
       <p id="u153-5">Design by mondaystudio</p>
