--- a/kitties/index.html
+++ b/kitties/index.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>SUBBEAT presents Kitties #1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4063657173" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3772573113" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/TFV51zhkkI6QcC3z7F7wtikjP1trH7yRL6g8UvBdV0GfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MKGHfwz6MsMMeMS6MqGIQWmDZZMg1VQoDb9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/3R8J0v_tZxPmVdcl4goH2iNoCvlfhwGVKsPnQk6A_oIfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwz6MsMMeMS6MKGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MqGIQWmDZZMgCxRoDb9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -29,60 +29,64 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="clearfix colelem" id="pu94-6"><!-- column -->
-    <div class="clearfix colelem" id="u94-6" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
+    <div class="clearfix colelem" id="u94-6" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu94-6"><!-- content -->
      <p>SUBBEAT</p>
      <p>presents</p>
     </div>
-    <div class="clearfix colelem" id="u114-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
+    <div class="clearfix colelem" id="u114-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu94-6"><!-- content -->
      <p>Kitties #1</p>
     </div>
+    <div class="clearfix colelem" id="pu204"><!-- group -->
+     <div class="shadow grpelem" id="u204" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu204"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u201-9" href="https://www.toneden.io/subbeat/post/subbeat-kitties-1-ep" target="_blank" title="DOWNLOAD" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu204"><!-- content --><p id="u201">&nbsp;</p><p id="u201-3">Free</p><p id="u201-5">Download</p><p id="u201-7">Kitties #1</p></a>
+    </div>
     <div class="clearfix colelem" id="pu111"><!-- group -->
-     <div class="grpelem" id="u111" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u117-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
-      <p id="u117-2">#1</p>
+     <div class="grpelem" id="u111" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu111"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u117-8" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu111"><!-- content -->
+      <p id="u117-2">Track 1</p>
       <p id="u117-4">Yoshino Yoshikawa</p>
       <p id="u117-6">Slack Bubbling</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu129"><!-- group -->
-     <div class="shadow grpelem" id="u129" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u126-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
-      <p id="u126-2">#2</p>
+     <div class="shadow grpelem" id="u129" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu129"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u126-8" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu129"><!-- content -->
+      <p id="u126-2">Track 2</p>
       <p id="u126-4">stepic</p>
       <p id="u126-6">myamyamyamyamyamyamya</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu135"><!-- group -->
-     <div class="shadow grpelem" id="u135" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u132-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
-      <p id="u132-2">#3</p>
+     <div class="shadow grpelem" id="u135" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu135"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u132-8" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu135"><!-- content -->
+      <p id="u132-2">Track 3</p>
       <p id="u132-4">LOBOTOME</p>
       <p id="u132-6">Bring In The Kitties</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu141"><!-- group -->
-     <div class="shadow grpelem" id="u141"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u138-8" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-      <p id="u138-2">#4</p>
+     <div class="shadow grpelem" id="u141" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu141"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u138-8" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu141"><!-- content -->
+      <p id="u138-2">Track 4</p>
       <p id="u138-4">beatbird</p>
       <p id="u138-6">Nyaa Bambaata</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu147"><!-- group -->
-     <div class="shadow grpelem" id="u147" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u144-8" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
-      <p id="u144-2">#5</p>
+     <div class="shadow grpelem" id="u147" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu147"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u144-8" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu147"><!-- content -->
+      <p id="u144-2">Track 5</p>
       <p id="u144-4">mondaystudio</p>
       <p id="u144-6">New Cat</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu159"><!-- group -->
-     <div class="shadow grpelem" id="u159" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
-     <a class="nonblock nontext clearfix grpelem" id="u156-9" href="https://www.toneden.io/subbeat/post/subbeat-kitties-1-ep" target="_blank" title="DOWNLOAD" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p id="u156">&nbsp;</p><p id="u156-3">FREE</p><p id="u156-5">DOWNLOAD</p><p id="u156-7">HERE</p></a>
+     <div class="shadow grpelem" id="u159" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu159"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u156-9" href="https://www.toneden.io/subbeat/post/subbeat-kitties-1-ep" target="_blank" title="DOWNLOAD" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu159"><!-- content --><p id="u156">&nbsp;</p><p id="u156-3">Free</p><p id="u156-5">Download</p><p id="u156-7">Kitties #1</p></a>
     </div>
     <div class="clearfix colelem" id="pu150"><!-- group -->
-     <div class="shadow grpelem" id="u150" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- simple frame --></div>
-     <div class="clearfix grpelem" id="u153-9" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
+     <div class="shadow grpelem" id="u150" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu150"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u153-9" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu150"><!-- content -->
       <p id="u153">&nbsp;</p>
       <p id="u153-3">Illustration by m3iji</p>
       <p id="u153-5">Design by mondaystudio</p>
@@ -90,7 +94,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1194" data-content-above-spacer="1190" data-content-below-spacer="66" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1344" data-content-above-spacer="1340" data-content-below-spacer="66" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
