--- a/kitties/index.html
+++ b/kitties/index.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>SUBBEAT presents Kitties #1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4285954386" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4128986947" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/n9jb9uBpMNHFwMMhgT1RUQxZ4g9L-uTAQEV5pyQPNVtfeGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwz6MsMMeMS6MKGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MqGIQWmDZZMg3xDoDb9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/9wDl8gCoIrBwGMy0LhAWCs2IVod05NJRp1_56ernyU3feGvgfF128MIPH2JXwDwX5QiLZcbtjD6kZeJtF2SDFhIajQbtFDmcZeIoFebojR4Kwhw-JfG0SamKjc90jWbCSamKjc90jWbCiaiaO1Fujc48OcBXJ6lc-AUDdhtlShNcifGHfwz6MsMMeMS6MKGHfwD6MsMMeMq6MKGHfFQ6MsMMeMJ6MqGIQWmDZZMg6jdEDb9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -27,8 +27,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="clearfix colelem" id="pu94-6"><!-- column -->
+  <div class="clearfix borderbox" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="u226"><!-- group -->
+    <a class="nonblock nontext clip_frame clearfix grpelem" id="u210" href="http://subbe.at/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image --><img class="position_content" id="u210_img" src="images/subbeat_id2_150601_white.png?crc=127210849" data-hidpi-src="images/subbeat_id2_150601_white_2x.png?crc=4117645463" alt="" width="60" height="63"/></a>
+   </div>
+   <div class="clearfix grpelem" id="pu94-6"><!-- column -->
     <div class="clearfix colelem" id="u94-6" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu94-6"><!-- content -->
      <p>SUBBEAT</p>
      <p>presents</p>
@@ -94,7 +97,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1344" data-content-above-spacer="1340" data-content-below-spacer="66" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1344" data-content-above-spacer="1340" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -110,6 +113,7 @@ setTimeout(function(){g(!0)},5E3):g()}};
 var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
+Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
